--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,11 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
-      <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- endbuild -->
   </head>
   <body ng-app="bootAngApp">
@@ -23,8 +23,16 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <div class="header">
+      <ul class="nav nav-pills pull-right">
+        <li ng-class="{active : tabActive.home}"><a ng-href="#/home">Home</a></li>
+        <li ng-class="{active : tabActive.menu}"><a ng-href="#/about">Menu Component</a></li>
+        <li><a ng-href="#">Contact</a></li>
+      </ul>
+      <h3 class="text-muted">BootAng</h3>
+    </div>
+    <div class="container" ng-view=""></div>
     <!-- Add your site or application content here -->
-    <div class="container" ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -44,7 +52,8 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-        <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
