BootangMenu directive almost done

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <!-- <link rel="stylesheet" href="styles/main.css"> -->
+    <link rel="stylesheet" href="styles/app.css">
     <!-- endbuild -->
   </head>
   <body ng-app="BootAng">
@@ -62,8 +63,11 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/menu.js"></script>
+
+        <script src="scripts/directives/bootang-menu.js"></script>
         <!-- endbuild -->
 </body>
 </html>
