--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/app.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="BootAng">
+  <body ng-app="BootAngDisplayApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -62,6 +62,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/bootang.js"></script>
         <script src="scripts/app.js"></script>
         
         <script src="scripts/controllers/main.js"></script>
