Created grunt task for building, deploying and serving BootAng's directives, module load up and templates into bootang.min.js. It also copies it into app for testing and runs testing server

--- a/app/index.html
+++ b/app/index.html
@@ -62,13 +62,15 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/bootang.js"></script>
+        <!-- <script src="scripts/bootang.js"></script> -->
+        <script src="scripts/bootang.min.js"></script>
         <script src="scripts/app.js"></script>
+        
         
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/menu.js"></script>
 
-        <script src="scripts/directives/bootang-menu.js"></script>
+        <!-- <script src="scripts/directives/bootang-menu.js"></script> -->
         <!-- endbuild -->
 </body>
 </html>
